[refactor] rename to 'Pimp My Deck!'

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,5 +1,5 @@
 {
-  "short_name": "Steam Deck Resources",
+  "short_name": "Pimp My Deck!",
   "name": "A collection of steam deck resources",
   "icons": [
     {
